--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,6 +39,7 @@
 .Partner-login {
     color: #000;
     font-weight: 500;
+    text-decoration: none !important;
 }
 
 .mc {
@@ -160,7 +161,74 @@
     right: -100px;
 }
 
+.about {
+    overflow: hidden;
+background:
+        linear-gradient(rgba(0, 0, 0, 0.24), rgba(0, 0, 0, 0.116)),
+        /* Gradient overlay */
+        url('/assets/about.jpg') center/cover no-repeat;
+    /* Avoids tiling */
+    width: 100%;
+    height: 100vh;
+    /* Adjust height as needed */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
 
+@media (max-width: 768px) {
+    .about {
+        height: 40vh;
+        background-position: top;
+    }
+}
+
+.video-section {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    /* adjust as needed */
+    overflow: hidden;
+}
+
+.bg-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2));
+}
+
+.play-btn {
+  
+transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.85);
+    border: none;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    color: #031ae7;
+    cursor: pointer;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, background 0.3s ease;
+}
+
+.play-btn:hover {
+    transform: translate(-50%, -50%) scale(1.1);
+    background: rgba(255, 255, 255, 1);
+}
 //----------
 
 .section-heading {
@@ -207,7 +275,12 @@
 .finances-section {
     background-color: #fff;
 }
-
+.finances-section p{
+    font-size: 18px;
+}
+.finances-section-he{
+    font-size: 47px;
+}
 .btn-primary {
     background-color: #4f46e5;
     border: none;
@@ -501,3 +574,22 @@ footer .fab:hover {
 .carousel-track img{
     height: 30px !important;
 }
+//-----
+
+.modal-content {
+    animation: slideIn 0.4s ease-in-out;
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateY(-30px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+
