--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           <a class="navbar-brand d-flex align-items-center mc" (click)="gotoStart()">
             <!-- <span class="logo-text">INBOX<span class="highlight">IST</span></span>
       <span class="slogan ms-2">HAPPY INBOXING</span> -->
-            <img style="width: 100px; height: 50px;" src="/assets/logo/logo.png" alt="">
+            <img style="width: 100px; height: 50px;" src="assets/logo/logo.png" alt="">
           </a>
 
           <!-- Hamburger Icon -->
@@ -90,8 +90,8 @@
   
         <!-- Right Column -->
         <div class="col-lg-6 d-flex justify-content-end position-relative">
-           <img src="/assets/baners.png" class=" vector-img" alt="">
-           <img src="/assets/banner-img.png" class=" h-75 w-75" alt="">
+           <img src="assets/baners.png" class=" vector-img" alt="">
+           <img src="assets/banner-img.png" class=" h-75 w-75" alt="">
 
         </div>
       </div>
@@ -114,34 +114,34 @@
       <div class="scroll-row  py-4 px-lg-5 px-2 m-0  scroll-left mt-4">
         <div class="carousel-track">
           <!-- Duplicate logos for infinite scroll effect -->
-          <img src="/assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg" alt="echopark">
-          <img src="/assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
-          <img src="/assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg" alt="copower">
-          <img src="/assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg" alt="colormovie">
-          <img src="/assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg" alt="dot1">
-          <img src="/assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg" alt="diamond">
-          <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg" alt="cleanenergy">
-          <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg" alt="chekpeople">
-          <img src="/assets/scroll/67e482910264ecbee5c61729_GOLDTURTLE-color.svg" alt="bluemount">
-          <img src="/assets/scroll/67e482992d8aa4b3b13970e9_dotcells-color.svg" alt="blueenergy">
+          <img src="assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg" alt="echopark">
+          <img src="assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
+          <img src="assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg" alt="copower">
+          <img src="assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg" alt="colormovie">
+          <img src="assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg" alt="dot1">
+          <img src="assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg" alt="diamond">
+          <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg" alt="cleanenergy">
+          <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg" alt="chekpeople">
+          <img src="assets/scroll/67e482910264ecbee5c61729_GOLDTURTLE-color.svg" alt="bluemount">
+          <img src="assets/scroll/67e482992d8aa4b3b13970e9_dotcells-color.svg" alt="blueenergy">
   
           <!-- Duplicate for smooth infinite scroll -->
-          <img src="/assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
+          <img src="assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
             alt="dot1">
-          <img src="/assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg"
+          <img src="assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg"
             alt="diamond">
-          <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
+          <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
             alt="cleanenergy">
-          <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
+          <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
             alt="chekpeople">
-  <img src="/assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg"
+  <img src="assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg"
     alt="echopark">
-  <img src="/assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
-  <img src="/assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg"
+  <img src="assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
+  <img src="assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg"
     alt="copower">
-  <img src="/assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg"
+  <img src="assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg"
     alt="colormovie">
-  <img src="/assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
+  <img src="assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
     alt="dot1">
         </div>
       </div>
@@ -150,42 +150,42 @@
       <div class="scroll-row scroll-right mt-4">
         <div class="carousel-track">
           <!-- Duplicate logos for infinite scroll effect -->
-          <img src="/assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
+          <img src="assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
             alt="dot1">
-          <img src="/assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg"
+          <img src="assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg"
             alt="diamond">
-          <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
+          <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
             alt="cleanenergy">
-          <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
+          <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
             alt="chekpeople">
-          <img src="/assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg"
+          <img src="assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg"
             alt="echopark">
-          <img src="/assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
-          <img src="/assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg"
+          <img src="assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
+          <img src="assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg"
             alt="copower">
-          <img src="/assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg"
+          <img src="assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg"
             alt="colormovie">
-          <img src="/assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
+          <img src="assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
             alt="dot1">
   
           <!-- Duplicate for smooth infinite scroll -->
-            <img src="/assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg"
+            <img src="assets/scroll/679bac6d44db9e2dfa7f1967_dd101df5c8549d10cad8fd345c5b988f_Fictional company logo (1).svg"
               alt="echopark">
-            <img src="/assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
-            <img src="/assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg"
+            <img src="assets/scroll/679bac96f42720f3b9c62e35_Fictional company logo (2).svg" alt="goldturtle">
+            <img src="assets/scroll/679badcea9c50e4b89825a87_32f4e33ff71aabf66ff18b7b4b0e5dcc_Fictional company logo (3).svg"
               alt="copower">
-            <img src="/assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg"
+            <img src="assets/scroll/679bade894e511c630114ca9_0e03c99f1a2f07c3926f23c60a58860e_Fictional company logo (4).svg"
               alt="colormovie">
-            <img src="/assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
+            <img src="assets/scroll/679bb2030f0fce7aa2013dec_38df7824e08759bc7f9f5de1b182f8ff_Fictional company logo (6).svg"
               alt="dot1">
-            <img src="/assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg"
+            <img src="assets/scroll/679bb2223f6f307bff7e2530_97d55b73f758c670231b0b0a0e39250c_Fictional company logo (7).svg"
               alt="diamond">
-            <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
+            <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
               alt="cleanenergy">
-            <img src="/assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
+            <img src="assets/scroll/679bb24fa4e5ad6f42f74667_c8bfb096f0f55502914133b06e7eec8e_Fictional company logo (9).svg"
               alt="chekpeople">
-            <img src="/assets/scroll/67e482910264ecbee5c61729_GOLDTURTLE-color.svg" alt="bluemount">
-            <img src="/assets/scroll/67e482992d8aa4b3b13970e9_dotcells-color.svg" alt="blueenergy">
+            <img src="assets/scroll/67e482910264ecbee5c61729_GOLDTURTLE-color.svg" alt="bluemount">
+            <img src="assets/scroll/67e482992d8aa4b3b13970e9_dotcells-color.svg" alt="blueenergy">
         </div>
       </div>
     </div>
@@ -273,7 +273,7 @@
 
       <!-- Right Column (Image) -->
       <div class="col-lg-6 text-center">
-                    <img src="/assets/0f65c227b3198b5e00e6f19a2b4712de.gif" alt="Background Shape" class="img-fluid">
+                    <img src="assets/0f65c227b3198b5e00e6f19a2b4712de.gif" alt="Background Shape" class="img-fluid">
 
       </div>
 
@@ -291,7 +291,7 @@
         <div class="col-lg-6 mb-4 mb-lg-0 text-center">
           <div class="position-relative">
             <!-- Background -->
-            <img src="/assets/679c68ace474494ced80aaeb_Frame 1618873008.webp" alt="Background Shape" class="img-fluid rounded shadow">
+            <img src="assets/679c68ace474494ced80aaeb_Frame 1618873008.webp" alt="Background Shape" class="img-fluid rounded shadow">
   
             <!-- Card Overlay -->
             <div
@@ -389,7 +389,7 @@
     
         <!-- Right Card -->
         <div class="col-lg-5 offset-lg-1">
-                              <img src="/assets/img.jpg" alt="Background Shape" class="img-fluid">
+                              <img src="assets/img.jpg" alt="Background Shape" class="img-fluid">
 
         </div>
       </div>
@@ -523,7 +523,7 @@
             <a class="navbar-brand d-flex align-items-center mc" (click)="gotoStart()">
               <!-- <span class="logo-text">INBOX<span class="highlight">IST</span></span>
                   <span class="slogan ms-2">HAPPY INBOXING</span> -->
-              <img style="width: 100px; height: 50px;" src="/assets/logo/logo.png" alt="">
+              <img style="width: 100px; height: 50px;" src="assets/logo/logo.png" alt="">
             </a>
             </div>
             <p class="pe-5  footer-de">
