--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -182,6 +182,11 @@ background:
         height: 40vh;
         background-position: top;
     }
+        .stat-number[_ngcontent-ng-c1326563926] {
+            font-size: 1.9rem;
+            font-weight: 700;
+            color: #4f46e5;
+        }
 }
 
 .video-section {
@@ -209,7 +214,6 @@ display: flex;
 
 .play-btn {
   
-transform: translate(-50%, -50%);
     background: rgba(255, 255, 255, 0.85);
     border: none;
     border-radius: 50%;
@@ -226,7 +230,6 @@ transform: translate(-50%, -50%);
 }
 
 .play-btn:hover {
-    transform: translate(-50%, -50%) scale(1.1);
     background: rgba(255, 255, 255, 1);
 }
 //----------
@@ -590,6 +593,41 @@ footer .fab:hover {
         transform: translateY(0);
         opacity: 1;
     }
+}
+
+//---
+.feature-table th,
+.feature-table td {
+    text-align: center;
+    vertical-align: middle;
+}
+
+.material-icons.check {
+    color: #28a745;
+    /* green */
+}
+
+.material-icons.cross {
+    color: #dc3545;
+    /* red */
+}
+
+.limited {
+    color: #ffc107;
+    /* yellow */
+    font-weight: 500;
+}
+
+.highlight-column {
+    background-color: #e6f9f0;
+    font-weight: bold;
+}
+
+.section-title {
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 
