--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -162,10 +162,10 @@
 
 .about {
     overflow: hidden;
-    background:
+    background-image:
         linear-gradient(rgba(0, 0, 0, 0.24), rgba(0, 0, 0, 0.116)),
         /* Gradient overlay */
-        url('/assets/about.jpg') center/cover no-repeat;
+        url('../../assets/about.jpg');
     /* Avoids tiling */
     width: 100%;
     height: 100vh;
